core/argocd/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.k3s-cluster.io`)
      kind: Rule
      services:
        - name: argocd-server
          kind: Service
          namespace: argocd
          port: 80
  tls:
    secretName: k3s-cluster-tls
